# lib/api-spec/openapi.yaml
@@ -348,7 +348,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AuthStatus"
         "401":
-          description: Invalid operator password
+          description: Invalid username or password
           content:
             application/json:
               schema:
@@ -805,8 +805,10 @@ components:
 
     LoginRequest:
       type: object
-      required: [password]
+      required: [username, password]
       properties:
+        username:
+          type: string
         password:
           type: string
 
@@ -816,6 +818,10 @@ components:
       properties:
         authenticated:
           type: boolean
+        username:
+          type: string
+        displayName:
+          type: string
 
     Error:
       type: object
